# SimpleVirtualAvatar

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  changes.txt
.github/workflows/: build-linux-amd64.yml  build-linux-arm64.yml  build-macos-amd64.yml  build-macos-arm64.yml  build-windows-amd64.yml  build-windows-arm64.yml  build.yml  runner.yml
examples/: heat_distortion.frag  neon_pulse.frag  swirl_vortex.frag
src/: Animation.cpp  Animation.hpp  AssetManager.cpp  AssetManager.hpp  AudioHandler.cpp  AudioHandler.hpp  AudioInput.cpp  AudioInput.hpp  Config.cpp  Engine.cpp  Engine.hpp  Input.cpp  Input.hpp  MenuBar.cpp  MenuBar.hpp  OsUtils.cpp  OsUtils.hpp  Renderer.cpp  Renderer.hpp  ShaderEditor.cpp  Shake.hpp  SpriteEditor.cpp  SpriteEditor.hpp  Utils.cpp  Utils.hpp  WinUtils.cpp  WinUtils.hpp  main.cpp
src/core/: Config.cpp  Config.hpp  Engine.cpp  Engine.hpp
src/graphics/: Animation.cpp  Renderer.cpp  Renderer.hpp  Shake.cpp  Shake.hpp
src/system/: AssetManager.hpp  AudioInput.cpp  Input.cpp  Keys.hpp
src/ui/: MenuBar.cpp  MenuBar.hpp  ShaderEditor.cpp  ShaderEditor.hpp  ShakeSettings.cpp  ShakeSettings.hpp  SpriteEditor.cpp  SpriteEditor.hpp
src/utils/: OsUtils.cpp  OsUtils.hpp  Utils.cpp
src/utils/linux/: OsUtils_lin.cpp  OsUtils_lin.hpp  OsUtils_lin_raylib.cpp
src/utils/macOS/: OsUtils_mac.cpp  OsUtils_mac.hpp
src/utils/windows/: OsUtils_win.cpp  OsUtils_win.hpp  OsUtils_win_raylib.cpp
